indicator 이름 enum으로 치환